--- a/server/package.json
+++ b/server/package.json
@@ -9,20 +9,26 @@
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.18.0",
+    "axios": "^1.11.0",
     "cors": "^2.8.5",
-    "sqlite3": "^5.1.0",
     "csv-parser": "^3.0.0",
-    "multer": "^1.4.4",
     "dotenv": "^16.0.0",
+    "express": "^4.18.0",
     "helmet": "^7.0.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.4",
+    "sqlite3": "^5.1.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.0",
-    "jest": "^29.0.0"
+    "jest": "^29.0.0",
+    "nodemon": "^3.0.0"
   },
-  "keywords": ["ecommerce", "api", "nodejs", "express"],
+  "keywords": [
+    "ecommerce",
+    "api",
+    "nodejs",
+    "express"
+  ],
   "author": "",
   "license": "MIT"
-} 
+}
